// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer Harmonised Group 1 renders correctly 1`] = `
<footer
  class="ecl-footer-harmonised ecl-footer-harmonised--group1"
>
  <div
    class="ecl-container ecl-footer-harmonised__container"
  >
    <div
      class="ecl-footer-harmonised__row"
    >
      <div
        class="ecl-footer-harmonised__column"
      >
        <div
          class="ecl-footer-harmonised__section"
        >
          <h2
            class="ecl-footer-harmonised__title"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-harmonised__title-link"
              href="/example"
            >
              Site name
            </a>
          </h2>
          <div
            class="ecl-footer-harmonised__description"
          >
            This site is managed by the Directorate-General for "DG identification"
          </div>
        </div>
      </div>
      <div
        class="ecl-footer-harmonised__column"
      >
        <div
          class="ecl-footer-harmonised__section"
        >
          <h2
            class="ecl-footer-harmonised__title ecl-footer-harmonised__title--separator"
          >
            
              Contact us            
          </h2>
          <ul
            class="ecl-footer-harmonised__list"
          >
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Contact information of the DG"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Contact information of the DG
              </a>
            </li>
          </ul>
        </div>
        <div
          class="ecl-footer-harmonised__section"
        >
          <h2
            class="ecl-footer-harmonised__title ecl-footer-harmonised__title--separator"
          >
            
              Follow us on            
          </h2>
          <ul
            class="ecl-footer-harmonised__list ecl-footer-harmonised__list--inline"
          >
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Facebook"
                class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-footer-harmonised__link"
                href="/example"
              >
                <svg
                  aria-hidden="true"
                  class="ecl-icon ecl-icon--xs ecl-link__icon"
                  focusable="false"
                >
                  <use
                    xlink:href="/icons.svg#branded--facebook"
                  />
                </svg>
                <span
                  class="ecl-link__label"
                >
                  Facebook
                </span>
              </a>
            </li>
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Twitter"
                class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-footer-harmonised__link"
                href="/example"
              >
                <svg
                  aria-hidden="true"
                  class="ecl-icon ecl-icon--xs ecl-link__icon"
                  focusable="false"
                >
                  <use
                    xlink:href="/icons.svg#branded--twitter"
                  />
                </svg>
                <span
                  class="ecl-link__label"
                >
                  Twitter
                </span>
              </a>
            </li>
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Linkedin"
                class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-footer-harmonised__link"
                href="/example"
              >
                <svg
                  aria-hidden="true"
                  class="ecl-icon ecl-icon--xs ecl-link__icon"
                  focusable="false"
                >
                  <use
                    xlink:href="/icons.svg#branded--linkedin"
                  />
                </svg>
                <span
                  class="ecl-link__label"
                >
                  Linkedin
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="ecl-footer-harmonised__column"
      >
        <div
          class="ecl-footer-harmonised__section"
        >
          <h2
            class="ecl-footer-harmonised__title ecl-footer-harmonised__title--separator"
          >
            
              About us            
          </h2>
          <ul
            class="ecl-footer-harmonised__list"
          >
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Information about the DG"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Information about the DG
              </a>
            </li>
          </ul>
        </div>
        <div
          class="ecl-footer-harmonised__section"
        >
          <h2
            class="ecl-footer-harmonised__title ecl-footer-harmonised__title--separator"
          >
            
              Related sites            
          </h2>
          <ul
            class="ecl-footer-harmonised__list"
          >
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Related link 1"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Related link 1
              </a>
            </li>
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Related link 2"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Related link 2
              </a>
            </li>
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Related link 3"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Related link 3
              </a>
            </li>
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Related link 4"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Related link 4
              </a>
            </li>
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Related link 5"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Related link 5
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="ecl-footer-harmonised__row"
    >
      <div
        class="ecl-footer-harmonised__column"
      >
        <div
          class="ecl-footer-harmonised__section ecl-footer-harmonised__section--condensed"
        >
          <div
            class="ecl-footer-harmonised__content"
          >
            More information on:
          </div>
          <ul
            class="ecl-footer-harmonised__list"
          >
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Class name 1"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Class name 1
              </a>
            </li>
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Class name 2"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Class name 2
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="ecl-footer-harmonised__row"
    >
      <div
        class="ecl-footer-harmonised__column"
      >
        <div
          class="ecl-footer-harmonised__section"
        >
          <h2
            class="ecl-footer-harmonised__title"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-harmonised__title-link"
              href="https://ec.europa.eu/info/index_en"
            >
              European Commission
            </a>
          </h2>
        </div>
      </div>
      <div
        class="ecl-footer-harmonised__column"
      >
        <div
          class="ecl-footer-harmonised__section ecl-footer-standardised__section--split-list"
        >
          <ul
            class="ecl-footer-harmonised__list"
          >
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Contact the European Commission"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Contact the European Commission
              </a>
            </li>
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Follow the European Commission on social media"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Follow the European Commission on social media
              </a>
            </li>
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Resources for partners
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="ecl-footer-harmonised__column"
      >
        <div
          class="ecl-footer-harmonised__section ecl-footer-standardised__section--split-list"
        >
          <ul
            class="ecl-footer-harmonised__list"
          >
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Language policy"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Language policy
              </a>
            </li>
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Cookies"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Cookies
              </a>
            </li>
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Privacy policy"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Privacy policy
              </a>
            </li>
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Legal notice"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Legal notice
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</footer>
`;

exports[`Footer Harmonised Group 1 renders correctly with extra attributes 1`] = `
<footer
  class="ecl-footer-harmonised ecl-footer-harmonised--group1"
  data-test="data-test-value"
  data-test-1="data-test-value-1"
>
  <div
    class="ecl-container ecl-footer-harmonised__container"
  >
    <div
      class="ecl-footer-harmonised__row"
    >
      <div
        class="ecl-footer-harmonised__column"
      >
        <div
          class="ecl-footer-harmonised__section"
        >
          <h2
            class="ecl-footer-harmonised__title"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-harmonised__title-link"
              href="/example"
            >
              Site name
            </a>
          </h2>
          <div
            class="ecl-footer-harmonised__description"
          >
            This site is managed by the Directorate-General for "DG identification"
          </div>
        </div>
      </div>
      <div
        class="ecl-footer-harmonised__column"
      >
        <div
          class="ecl-footer-harmonised__section"
        >
          <h2
            class="ecl-footer-harmonised__title ecl-footer-harmonised__title--separator"
          >
            
              Contact us            
          </h2>
          <ul
            class="ecl-footer-harmonised__list"
          >
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Contact information of the DG"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Contact information of the DG
              </a>
            </li>
          </ul>
        </div>
        <div
          class="ecl-footer-harmonised__section"
        >
          <h2
            class="ecl-footer-harmonised__title ecl-footer-harmonised__title--separator"
          >
            
              Follow us on            
          </h2>
          <ul
            class="ecl-footer-harmonised__list ecl-footer-harmonised__list--inline"
          >
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Facebook"
                class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-footer-harmonised__link"
                href="/example"
              >
                <svg
                  aria-hidden="true"
                  class="ecl-icon ecl-icon--xs ecl-link__icon"
                  focusable="false"
                >
                  <use
                    xlink:href="/icons.svg#branded--facebook"
                  />
                </svg>
                <span
                  class="ecl-link__label"
                >
                  Facebook
                </span>
              </a>
            </li>
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Twitter"
                class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-footer-harmonised__link"
                href="/example"
              >
                <svg
                  aria-hidden="true"
                  class="ecl-icon ecl-icon--xs ecl-link__icon"
                  focusable="false"
                >
                  <use
                    xlink:href="/icons.svg#branded--twitter"
                  />
                </svg>
                <span
                  class="ecl-link__label"
                >
                  Twitter
                </span>
              </a>
            </li>
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Linkedin"
                class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-footer-harmonised__link"
                href="/example"
              >
                <svg
                  aria-hidden="true"
                  class="ecl-icon ecl-icon--xs ecl-link__icon"
                  focusable="false"
                >
                  <use
                    xlink:href="/icons.svg#branded--linkedin"
                  />
                </svg>
                <span
                  class="ecl-link__label"
                >
                  Linkedin
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="ecl-footer-harmonised__column"
      >
        <div
          class="ecl-footer-harmonised__section"
        >
          <h2
            class="ecl-footer-harmonised__title ecl-footer-harmonised__title--separator"
          >
            
              About us            
          </h2>
          <ul
            class="ecl-footer-harmonised__list"
          >
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Information about the DG"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Information about the DG
              </a>
            </li>
          </ul>
        </div>
        <div
          class="ecl-footer-harmonised__section"
        >
          <h2
            class="ecl-footer-harmonised__title ecl-footer-harmonised__title--separator"
          >
            
              Related sites            
          </h2>
          <ul
            class="ecl-footer-harmonised__list"
          >
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Related link 1"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Related link 1
              </a>
            </li>
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Related link 2"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Related link 2
              </a>
            </li>
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Related link 3"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Related link 3
              </a>
            </li>
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Related link 4"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Related link 4
              </a>
            </li>
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Related link 5"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Related link 5
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="ecl-footer-harmonised__row"
    >
      <div
        class="ecl-footer-harmonised__column"
      >
        <div
          class="ecl-footer-harmonised__section ecl-footer-harmonised__section--condensed"
        >
          <div
            class="ecl-footer-harmonised__content"
          >
            More information on:
          </div>
          <ul
            class="ecl-footer-harmonised__list"
          >
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Class name 1"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Class name 1
              </a>
            </li>
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Class name 2"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Class name 2
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="ecl-footer-harmonised__row"
    >
      <div
        class="ecl-footer-harmonised__column"
      >
        <div
          class="ecl-footer-harmonised__section"
        >
          <h2
            class="ecl-footer-harmonised__title"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-harmonised__title-link"
              href="https://ec.europa.eu/info/index_en"
            >
              European Commission
            </a>
          </h2>
        </div>
      </div>
      <div
        class="ecl-footer-harmonised__column"
      >
        <div
          class="ecl-footer-harmonised__section ecl-footer-standardised__section--split-list"
        >
          <ul
            class="ecl-footer-harmonised__list"
          >
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Contact the European Commission"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Contact the European Commission
              </a>
            </li>
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Follow the European Commission on social media"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Follow the European Commission on social media
              </a>
            </li>
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Resources for partners
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="ecl-footer-harmonised__column"
      >
        <div
          class="ecl-footer-harmonised__section ecl-footer-standardised__section--split-list"
        >
          <ul
            class="ecl-footer-harmonised__list"
          >
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Language policy"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Language policy
              </a>
            </li>
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Cookies"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Cookies
              </a>
            </li>
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Privacy policy"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Privacy policy
              </a>
            </li>
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Legal notice"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Legal notice
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</footer>
`;

exports[`Footer Harmonised Group 1 renders correctly with extra class names 1`] = `
<footer
  class="ecl-footer-harmonised ecl-footer-harmonised--group1 custom-class custom-class--test"
>
  <div
    class="ecl-container ecl-footer-harmonised__container"
  >
    <div
      class="ecl-footer-harmonised__row"
    >
      <div
        class="ecl-footer-harmonised__column"
      >
        <div
          class="ecl-footer-harmonised__section"
        >
          <h2
            class="ecl-footer-harmonised__title"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-harmonised__title-link"
              href="/example"
            >
              Site name
            </a>
          </h2>
          <div
            class="ecl-footer-harmonised__description"
          >
            This site is managed by the Directorate-General for "DG identification"
          </div>
        </div>
      </div>
      <div
        class="ecl-footer-harmonised__column"
      >
        <div
          class="ecl-footer-harmonised__section"
        >
          <h2
            class="ecl-footer-harmonised__title ecl-footer-harmonised__title--separator"
          >
            
              Contact us            
          </h2>
          <ul
            class="ecl-footer-harmonised__list"
          >
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Contact information of the DG"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Contact information of the DG
              </a>
            </li>
          </ul>
        </div>
        <div
          class="ecl-footer-harmonised__section"
        >
          <h2
            class="ecl-footer-harmonised__title ecl-footer-harmonised__title--separator"
          >
            
              Follow us on            
          </h2>
          <ul
            class="ecl-footer-harmonised__list ecl-footer-harmonised__list--inline"
          >
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Facebook"
                class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-footer-harmonised__link"
                href="/example"
              >
                <svg
                  aria-hidden="true"
                  class="ecl-icon ecl-icon--xs ecl-link__icon"
                  focusable="false"
                >
                  <use
                    xlink:href="/icons.svg#branded--facebook"
                  />
                </svg>
                <span
                  class="ecl-link__label"
                >
                  Facebook
                </span>
              </a>
            </li>
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Twitter"
                class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-footer-harmonised__link"
                href="/example"
              >
                <svg
                  aria-hidden="true"
                  class="ecl-icon ecl-icon--xs ecl-link__icon"
                  focusable="false"
                >
                  <use
                    xlink:href="/icons.svg#branded--twitter"
                  />
                </svg>
                <span
                  class="ecl-link__label"
                >
                  Twitter
                </span>
              </a>
            </li>
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Linkedin"
                class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-footer-harmonised__link"
                href="/example"
              >
                <svg
                  aria-hidden="true"
                  class="ecl-icon ecl-icon--xs ecl-link__icon"
                  focusable="false"
                >
                  <use
                    xlink:href="/icons.svg#branded--linkedin"
                  />
                </svg>
                <span
                  class="ecl-link__label"
                >
                  Linkedin
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="ecl-footer-harmonised__column"
      >
        <div
          class="ecl-footer-harmonised__section"
        >
          <h2
            class="ecl-footer-harmonised__title ecl-footer-harmonised__title--separator"
          >
            
              About us            
          </h2>
          <ul
            class="ecl-footer-harmonised__list"
          >
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Information about the DG"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Information about the DG
              </a>
            </li>
          </ul>
        </div>
        <div
          class="ecl-footer-harmonised__section"
        >
          <h2
            class="ecl-footer-harmonised__title ecl-footer-harmonised__title--separator"
          >
            
              Related sites            
          </h2>
          <ul
            class="ecl-footer-harmonised__list"
          >
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Related link 1"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Related link 1
              </a>
            </li>
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Related link 2"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Related link 2
              </a>
            </li>
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Related link 3"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Related link 3
              </a>
            </li>
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Related link 4"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Related link 4
              </a>
            </li>
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Related link 5"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Related link 5
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="ecl-footer-harmonised__row"
    >
      <div
        class="ecl-footer-harmonised__column"
      >
        <div
          class="ecl-footer-harmonised__section ecl-footer-harmonised__section--condensed"
        >
          <div
            class="ecl-footer-harmonised__content"
          >
            More information on:
          </div>
          <ul
            class="ecl-footer-harmonised__list"
          >
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Class name 1"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Class name 1
              </a>
            </li>
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Class name 2"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Class name 2
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="ecl-footer-harmonised__row"
    >
      <div
        class="ecl-footer-harmonised__column"
      >
        <div
          class="ecl-footer-harmonised__section"
        >
          <h2
            class="ecl-footer-harmonised__title"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-harmonised__title-link"
              href="https://ec.europa.eu/info/index_en"
            >
              European Commission
            </a>
          </h2>
        </div>
      </div>
      <div
        class="ecl-footer-harmonised__column"
      >
        <div
          class="ecl-footer-harmonised__section ecl-footer-standardised__section--split-list"
        >
          <ul
            class="ecl-footer-harmonised__list"
          >
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Contact the European Commission"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Contact the European Commission
              </a>
            </li>
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Follow the European Commission on social media"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Follow the European Commission on social media
              </a>
            </li>
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Resources for partners
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="ecl-footer-harmonised__column"
      >
        <div
          class="ecl-footer-harmonised__section ecl-footer-standardised__section--split-list"
        >
          <ul
            class="ecl-footer-harmonised__list"
          >
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Language policy"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Language policy
              </a>
            </li>
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Cookies"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Cookies
              </a>
            </li>
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Privacy policy"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Privacy policy
              </a>
            </li>
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Legal notice"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Legal notice
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</footer>
`;

exports[`Footer Harmonised Group 2 renders correctly 1`] = `
<footer
  class="ecl-footer-harmonised ecl-footer-harmonised--group2"
>
  <div
    class="ecl-container ecl-footer-harmonised__container"
  >
    <div
      class="ecl-footer-harmonised__row"
    >
      <div
        class="ecl-footer-harmonised__column"
      >
        <div
          class="ecl-footer-harmonised__section"
        >
          <h2
            class="ecl-footer-harmonised__title"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-harmonised__title-link"
              href="https://ec.europa.eu/info/index_en"
            >
              European Commission
            </a>
          </h2>
        </div>
      </div>
      <div
        class="ecl-footer-harmonised__column"
      >
        <div
          class="ecl-footer-harmonised__section"
        >
          <ul
            class="ecl-footer-harmonised__list"
          >
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Contact the European Commission"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Contact the European Commission
              </a>
            </li>
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Follow the European Commission on social media"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Follow the European Commission on social media
              </a>
            </li>
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Resources for partners"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Resources for partners
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="ecl-footer-harmonised__column"
      >
        <div
          class="ecl-footer-harmonised__section"
        >
          <ul
            class="ecl-footer-harmonised__list"
          >
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Language policy"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Language policy
              </a>
            </li>
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Cookies"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Cookies
              </a>
            </li>
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Privacy policy"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Privacy policy
              </a>
            </li>
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Legal notice"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Legal notice
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</footer>
`;

exports[`Footer Harmonised Group 2 renders correctly with extra attributes 1`] = `
<footer
  class="ecl-footer-harmonised ecl-footer-harmonised--group2"
  data-test="data-test-value"
  data-test-1="data-test-value-1"
>
  <div
    class="ecl-container ecl-footer-harmonised__container"
  >
    <div
      class="ecl-footer-harmonised__row"
    >
      <div
        class="ecl-footer-harmonised__column"
      >
        <div
          class="ecl-footer-harmonised__section"
        >
          <h2
            class="ecl-footer-harmonised__title"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-harmonised__title-link"
              href="https://ec.europa.eu/info/index_en"
            >
              European Commission
            </a>
          </h2>
        </div>
      </div>
      <div
        class="ecl-footer-harmonised__column"
      >
        <div
          class="ecl-footer-harmonised__section"
        >
          <ul
            class="ecl-footer-harmonised__list"
          >
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Contact the European Commission"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Contact the European Commission
              </a>
            </li>
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Follow the European Commission on social media"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Follow the European Commission on social media
              </a>
            </li>
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Resources for partners"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Resources for partners
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="ecl-footer-harmonised__column"
      >
        <div
          class="ecl-footer-harmonised__section"
        >
          <ul
            class="ecl-footer-harmonised__list"
          >
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Language policy"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Language policy
              </a>
            </li>
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Cookies"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Cookies
              </a>
            </li>
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Privacy policy"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Privacy policy
              </a>
            </li>
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Legal notice"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Legal notice
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</footer>
`;

exports[`Footer Harmonised Group 2 renders correctly with extra class names 1`] = `
<footer
  class="ecl-footer-harmonised ecl-footer-harmonised--group2 custom-class custom-class--test"
>
  <div
    class="ecl-container ecl-footer-harmonised__container"
  >
    <div
      class="ecl-footer-harmonised__row"
    >
      <div
        class="ecl-footer-harmonised__column"
      >
        <div
          class="ecl-footer-harmonised__section"
        >
          <h2
            class="ecl-footer-harmonised__title"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-harmonised__title-link"
              href="https://ec.europa.eu/info/index_en"
            >
              European Commission
            </a>
          </h2>
        </div>
      </div>
      <div
        class="ecl-footer-harmonised__column"
      >
        <div
          class="ecl-footer-harmonised__section"
        >
          <ul
            class="ecl-footer-harmonised__list"
          >
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Contact the European Commission"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Contact the European Commission
              </a>
            </li>
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Follow the European Commission on social media"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Follow the European Commission on social media
              </a>
            </li>
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Resources for partners"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Resources for partners
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="ecl-footer-harmonised__column"
      >
        <div
          class="ecl-footer-harmonised__section"
        >
          <ul
            class="ecl-footer-harmonised__list"
          >
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Language policy"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Language policy
              </a>
            </li>
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Cookies"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Cookies
              </a>
            </li>
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Privacy policy"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Privacy policy
              </a>
            </li>
            <li
              class="ecl-footer-harmonised__list-item"
            >
              <a
                aria-label="Link to Legal notice"
                class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
                href="/example"
              >
                Legal notice
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</footer>
`;

exports[`Footer Harmonised Group 3 renders correctly 1`] = `
<footer
  class="ecl-footer-harmonised ecl-footer-harmonised--group3"
>
  <div
    class="ecl-container ecl-footer-harmonised__container"
  >
    <div
      class="ecl-footer-harmonised__row"
    >
      <div
        class="ecl-footer-harmonised__column"
      >
        <div
          class="ecl-footer-harmonised__section"
        >
          <h2
            class="ecl-footer-harmonised__title"
          >
            
              Joint partnership            
          </h2>
        </div>
        <div
          class="ecl-footer-harmonised__section"
        >
          <ul
            class="ecl-footer-harmonised__logo-list"
          >
            <li
              class="ecl-footer-harmonised__logo-item"
            >
              <img
                alt="Partnership 1 logo"
                class="ecl-footer-harmonised__logo"
                src="https://inno-ecl.s3.amazonaws.com/media/examples/placeholder.svg"
                title="Partnership 1"
              />
            </li>
            <li
              class="ecl-footer-harmonised__logo-item"
            >
              <img
                alt="Partnership 2 logo"
                class="ecl-footer-harmonised__logo"
                src="https://inno-ecl.s3.amazonaws.com/media/examples/placeholder.svg"
                title="Partnership 2"
              />
            </li>
            <li
              class="ecl-footer-harmonised__logo-item"
            >
              <img
                alt="European Commission logo"
                class="ecl-footer-harmonised__logo"
                src="/logo.svg"
                title="European Commission"
              />
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</footer>
`;

exports[`Footer Harmonised Group 3 renders correctly with extra attributes 1`] = `
<footer
  class="ecl-footer-harmonised ecl-footer-harmonised--group3"
  data-test="data-test-value"
  data-test-1="data-test-value-1"
>
  <div
    class="ecl-container ecl-footer-harmonised__container"
  >
    <div
      class="ecl-footer-harmonised__row"
    >
      <div
        class="ecl-footer-harmonised__column"
      >
        <div
          class="ecl-footer-harmonised__section"
        >
          <h2
            class="ecl-footer-harmonised__title"
          >
            
              Joint partnership            
          </h2>
        </div>
        <div
          class="ecl-footer-harmonised__section"
        >
          <ul
            class="ecl-footer-harmonised__logo-list"
          >
            <li
              class="ecl-footer-harmonised__logo-item"
            >
              <img
                alt="Partnership 1 logo"
                class="ecl-footer-harmonised__logo"
                src="https://inno-ecl.s3.amazonaws.com/media/examples/placeholder.svg"
                title="Partnership 1"
              />
            </li>
            <li
              class="ecl-footer-harmonised__logo-item"
            >
              <img
                alt="Partnership 2 logo"
                class="ecl-footer-harmonised__logo"
                src="https://inno-ecl.s3.amazonaws.com/media/examples/placeholder.svg"
                title="Partnership 2"
              />
            </li>
            <li
              class="ecl-footer-harmonised__logo-item"
            >
              <img
                alt="European Commission logo"
                class="ecl-footer-harmonised__logo"
                src="/logo.svg"
                title="European Commission"
              />
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</footer>
`;

exports[`Footer Harmonised Group 3 renders correctly with extra class names 1`] = `
<footer
  class="ecl-footer-harmonised ecl-footer-harmonised--group3 custom-class custom-class--test"
>
  <div
    class="ecl-container ecl-footer-harmonised__container"
  >
    <div
      class="ecl-footer-harmonised__row"
    >
      <div
        class="ecl-footer-harmonised__column"
      >
        <div
          class="ecl-footer-harmonised__section"
        >
          <h2
            class="ecl-footer-harmonised__title"
          >
            
              Joint partnership            
          </h2>
        </div>
        <div
          class="ecl-footer-harmonised__section"
        >
          <ul
            class="ecl-footer-harmonised__logo-list"
          >
            <li
              class="ecl-footer-harmonised__logo-item"
            >
              <img
                alt="Partnership 1 logo"
                class="ecl-footer-harmonised__logo"
                src="https://inno-ecl.s3.amazonaws.com/media/examples/placeholder.svg"
                title="Partnership 1"
              />
            </li>
            <li
              class="ecl-footer-harmonised__logo-item"
            >
              <img
                alt="Partnership 2 logo"
                class="ecl-footer-harmonised__logo"
                src="https://inno-ecl.s3.amazonaws.com/media/examples/placeholder.svg"
                title="Partnership 2"
              />
            </li>
            <li
              class="ecl-footer-harmonised__logo-item"
            >
              <img
                alt="European Commission logo"
                class="ecl-footer-harmonised__logo"
                src="/logo.svg"
                title="European Commission"
              />
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</footer>
`;
